syntax = "proto3";

import "google/api/annotations.proto";

package api;

service AdminService {
    rpc GetSession (GetSessionRequest) returns (GetSessionResponse) {
        option (google.api.http) = {
          get: "/session"
        };
    }
}

message GetSessionRequest {
}

message GetSessionResponse {
    string host = 1;
    string node_addr = 2;
    string session_id = 3;
}

message Identifier {
    string id = 1;
    Type type = 2;
    string node_addr = 3;

    enum Type {
      HOST = 0;
      CLIENT = 1;
    }
}
